<resources>
    <string name="app_name">UDLE</string>
    <string name="signInButton">Sign in</string>
    <string name="registerButton">Register</string>
    <string name="enterYourNumberPhone">Enter your number phone</string>
    <string name="Hello">Hello!</string>
    <string name="Next">Next</string>


    <string name="mapActivityNoGps">Dear user, your gps is currently disabled. Would you like to enable it?</string>
    <string name="locationEnable">Location is enabled</string>
    <string name="invalidAddress">Invalid Address, move the map please</string>

    <string name="incorrectLocation">This location was not recognized, please chose a correct location</string>

    <string name="MenuMap_SearchHint">Search the desired delivery address</string>
    <string name="NoCardInformation">Please, fill in your card information</string>
    <string name="ValidatePosition">Start an order</string>
    <string name="NoMenuSelected">You need to select at least one menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonCallDeliveryGuy">Call Delivery Guy</string>
    <string name="markerTitle">Delivery Address</string>

    <string name="recapOfCommand">Recap of the command:</string>
    <string name="deliveryAddress">Delivery Address:</string>
    <string name="deliveryCost">Delivery Cost:</string>
    <string name="deliveryCostPrice">2.00 CHF</string>
    <string name="total">Total</string>
    <string name="confirm">Confirm</string>
    <string name="descriptionBurgerRotating">image stop rotating when order accepted</string>
    <string name="infotextwaiting">Please wait for a shop to accept your command</string>
    <string name="infotextwaitingConfirmed">Congrats, your order is being sent...</string>

    <string name="WaitingOrders">Waiting Order</string>
    <string name="ConfirmOrders">Confirmed Order</string>

    <string name="sampleText">This is a sample text.</string>
    <string name="openSlideMenu">Open slide menu</string>
    <string name="closeSlideMenu">Close slide menu</string>
    <string name="username">Username</string>
    <string name="restaurantMode">Restaurant mode</string>
    <string name="restaurantModeDesc">manage your orders</string>
    <string name="about">About</string>
    <string name="removeMessage_1">"Remove :"</string>
    <string name="removeMessage_2">"One of the "</string>
    <string name="removeMessage_3">"No options."</string>
    <string name="removeMessage_5">"No options selected."</string>
    <string name="notImplemented">Not implemented</string>
    <string name="TitleAlertBack">Give up the order"</string>
    <string name="MessageAlertBack">Are you sure you want to go back? This will delete your order</string>
    <string name="expectedTime">Expected Time</string>
    <string name="acceptCommand">Accept Command</string>
    <string name="expectedTimeNotValid">Please enter an expected time</string>
    <string name="commandDelivered">Command Delivered</string>
    <string name="home">Home</string>
    <string name="orderNow">Order now!</string>
    <string name="profile">Your profile</string>
    <string name="settings">settings</string>
    <string name="profile_title_logged_in">Hello :</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>
    <string name="parse_app_id">9owjl8GmUsbfyoKtXhd5hK7QX8CUJVfuAvSLNoaY</string>
    <string name="parse_client_key">xd6XKHd9NxLfzFPbHQ5xaMHVzU1gfeLen0qCyI4F</string>
    <string name="facebook_app_id">1531627347136434</string>
    <string name="noMenuNoOptions">No menus selected. You need to select at least one menu in order to choose your options for it.</string>
    <string name="noOptions">No options</string>
    <string name="orderedBy">Ordered by: </string>
    <string name="help1">first help page</string>
    <string name="help">Help</string>
    <string name="help_page">"Help page "</string>
    <string name="helpDesc">How to use Udle</string>
    <string name="back">back</string>
    <string name="currentOrders">Current Orders</string>
    <string name="currentOrdersDetail">see your current orders</string>

    <string name="OrderNotAvailable">Sorry, the order is no more available.</string>
    <string name="listOrderRestaurantMap">listOrderRestaurantMap</string>
    <string name="switchToListMode">Switch to List mode</string>
    <string name="No_orders_for_now">No orders for now </string>
    <string name="Wait_a_moment">Wait a moment please</string>
    <string name="options">"Options:  "</string>
    <string name="status">Status</string>
    <string name="enRoute">En Route</string>
    <string name="expectedTime_min">Expected time (min)</string>
    <string name="Loading">Loading</string>
    <string name="checkingForNewOrders">Checking for new orders...</string>
    <string name="waitWhileLoading">Wait while loading...</string>
    <string name="Refresh">Refresh</string>
    <string name="notificationTitle">Order accepted</string>
    <string name="notificationText">Your order was accepted. Click to see details.</string>
    <string name="noRestaurantAvailable">Sorry, no restaurants are available right now. Try later.</string>
    <string name="payment_activity_title">Payment Info</string>
    <string name="recap_of_your_order">Recap of your order :</string>
    <string name="expectedTimeNegative">Please enter a positive number</string>
    <string name="expectedTimeTooBig">Expected time must be smaller than 60 minutes</string>
    <string name="adressTest">rue de bourg</string>

    <string name="Delievered">Delievered</string>
    <string name="ContactUs">Contact us</string>
    <string name="VisitOurWebSite">Visit our website</string>
    <string name="VisitOurBlog">Visit our blog</string>
    <string name="CVG">CVG</string>
    <string name="aboutus">about udle</string>
    <string name="title_activity_credit_card">CreditCardActivity</string>
    <string name="addACreditCard">Add a credit card</string>
    <string name="noCreditCardYet">You don\'t have any credit card yet</string>
    <string name="Validate">Validate</string>
    <string name="creditCard">Credit Card</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalide lat long</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">adress found</string>
    <string name="clickOnYourMeal">Click on your meal to agrement it!</string>
    <string name="noCreditCardAdded">No credit card added</string>
    <string name="errorInYourPhoneCall">Error in your phone call</string>
    <string name="rightToPassPhoneCall">UDle doesn\'t have the right to pass phone call</string>
    <string name="recapOfTheOrder">Recap of the orderElement:</string>
    <string name="thanksToUseUdle">Thanks for trusting Udle</string>
    <string name="SeeYouSoon">see you soon!</string>
    <string name="waiting">Waiting</string>

</resources>
