<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.udle.activities.CurrentOrdersDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliveryAddress"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/CurrentOrders_deliveryAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:id="@+id/CurrentOrders_recapListView"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:id="@+id/CurrentOrders_deliveryCost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliveryCost"
                android:textSize="10sp"
                android:gravity="start"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/deliveryCostPrice"
                android:gravity="end"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/CurrentOrders_totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"/>
    </LinearLayout>


    <Button
        android:id="@+id/CurrentOrders_back"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/back"
        android:layout_weight="10"
        android:onClick="back" />

</LinearLayout>