<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ch.epfl.sweng.udle.activities.MenuOptionsDrinks.OptionsFragment"
    android:id="@+id/Layout_Options"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:id="@+id/Options_noMenuSelected"
        android:text="@string/noMenuNoOptions"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/clickOnYourMeal"
            android:textStyle="bold"
            android:text="@string/clickOnYourMeal"
            android:layout_marginTop="@dimen/_3sdp"/>

    <ExpandableListView
        android:id="@+id/MenuElement_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:childDivider="#00000000">
    </ExpandableListView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            >

        </LinearLayout>


    </RelativeLayout>




    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/Next"
        android:id="@+id/optionNext"
        android:layout_weight="15"
        android:textAllCaps="false"
        android:layout_margin="@dimen/_3sdp"
        android:background="@drawable/button_shape2"
        android:textColor="@color/colorUdle"
        android:textSize="25sp"
        android:visibility="gone"

        />


</LinearLayout>
