<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/_20sdp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.udle.activities.AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        >

    <LinearLayout
    android:layout_marginTop="@dimen/_40sdp"
    android:id="@+id/llContactUs"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/support_contact"
        android:layout_gravity="center"/>
    <TextView
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ContactUs"
        android:layout_gravity="center"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/llWebsite"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/laptop"
            android:layout_gravity="center"/>
        <TextView
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VisitOurWebSite"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llBlog"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star"
            android:layout_gravity="center"/>
        <TextView
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VisitOurBlog"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llCvg"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cvg"
            android:layout_gravity="center"/>
        <TextView
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CVG"
            android:layout_gravity="center"/>
    </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/versionApp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:text="v: 1.0"
        />


</RelativeLayout>
