<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.udle.activities.CurentOrdersActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listCurrentOrders"
            android:layout_marginTop="30dp"
            android:layout_weight="0.9"
            android:contentDescription="listCurrentOrders"
            />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_3sdp">
        <LinearLayout
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_3sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/logoburger"
            android:layout_gravity="center"/>
            <TextView
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WaitingOrders"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_3sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/logogreen"
                android:layout_gravity="center"/>
            <TextView
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enRoute"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_3sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/logosilver"
                android:layout_gravity="center"/>
            <TextView
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Delievered"
                android:layout_gravity="center"/>
        </LinearLayout>
        </LinearLayout>


        <Button
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Refresh"
            android:id="@+id/CurrentOrders_button_refresh"
            android:onClick="refreshAll"
            android:layout_gravity="center_vertical"

            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="10sp"

            android:background="@drawable/button_shape2"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />



    </LinearLayout>


    </LinearLayout>
</RelativeLayout>